@@ -5,6 +5,7 @@ xx/xx/xx
 * Fixed hang in seqstarnet when processing a single-file sequence with no star mask
 * Fixed using default masters names in calibrate (GUI)
 * Fixed invoking external programs in CLI mode (Windows only)
+* Fixed stream setting for all versions of ffmpeg (mp4 export crash)
 * Changed Windows to build in console mode even for stable releases
 * Changed gnuplot initialization to keep plots open after stopping main process (and fixed leak)
 
